--- a/.yamato/urp_performance_boatattack-xrquest-vulkan.yml
+++ b/.yamato/urp_performance_boatattack-xrquest-vulkan.yml
@@ -52,7 +52,7 @@ URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Li
               -  "TestProjects/BoatAttack/Logs/*.log"
     dependencies:
       -  path: .yamato/urp_performance_boatattack-xrquest-vulkan.yml#Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Linear_trunk
-         rerun: on-new-revision
+         rerun: on_new_revision
 Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Linear_trunk:
     name: Build URP_Performance_BoatAttack on XRQuest_Vulkan_il2cpp_Linear_performance_playmode_runtime_build_Player on version trunk
     agent:
@@ -245,9 +245,9 @@ URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Li
               -  "TestProjects/BoatAttack/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:XRQuest
-         rerun: always
+         rerun: on_new_revision
       -  path: .yamato/urp_performance_boatattack-xrquest-vulkan.yml#Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Linear_CUSTOM-REVISION
-         rerun: always
+         rerun: on_new_revision
 Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2cpp_Linear_CUSTOM-REVISION:
     name: Build URP_Performance_BoatAttack on XRQuest_Vulkan_il2cpp_Linear_performance_playmode_runtime_build_Player on version CUSTOM-REVISION
     agent:
@@ -326,7 +326,7 @@ Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2
               -  "players*/**"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:XRQuest
-         rerun: always
+         rerun: on_new_revision
 URP_Performance_BoatAttack_XRQuest_Vulkan_performance_build_editmode_il2cpp_Linear_CUSTOM-REVISION:
     name: URP_Performance_BoatAttack on XRQuest_Vulkan_performance_build_editmode_il2cpp_Linear on version CUSTOM-REVISION
     agent:
@@ -401,4 +401,4 @@ URP_Performance_BoatAttack_XRQuest_Vulkan_performance_build_editmode_il2cpp_Line
               -  "TestProjects/BoatAttack/Logs/*.log"
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:XRQuest
-         rerun: always
+         rerun: on_new_revision
