[2d] Initial integration to Splines.

--- a/com.unity.render-pipelines.universal/Editor/Unity.RenderPipelines.Universal.Editor.asmdef
+++ b/com.unity.render-pipelines.universal/Editor/Unity.RenderPipelines.Universal.Editor.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "Unity.RenderPipelines.Universal.Editor",
+    "rootNamespace": "",
     "references": [
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:d60799ab2a985554ea1a39cd38695018",
@@ -9,7 +10,9 @@
         "GUID:be0903cd8e1546f498710afdc59db5eb",
         "GUID:b75d3cd3037d383a8d1e2f9a26d73d8a",
         "GUID:329b4ccd385744985bf3f83cfd77dfe7",
-        "GUID:9604b18aafdbc9346bceb5e19ac9c746"
+        "GUID:9604b18aafdbc9346bceb5e19ac9c746",
+        "GUID:e43142fc3fec6554980dde6126631f1d",
+        "GUID:21d1eb854b91ade49bc69a263d12bee2"
     ],
     "includePlatforms": [
         "Editor"
@@ -26,7 +29,7 @@
             "expression": "2.0.0-preview.7",
             "define": "ADAPTIVE_PERFORMANCE_2_0_0_OR_NEWER"
         },
-		{
+        {
             "name": "com.unity.modules.xr",
             "expression": "1.0.0",
             "define": "ENABLE_XR_MODULE"
