--- a/.yamato/urp_2d-linux-vulkan.yml
+++ b/.yamato/urp_2d-linux-vulkan.yml
@@ -34,7 +34,7 @@ Build_URP_2D_Linux_Vulkan_Standalone_mono_Linear_trunk:
     agent:
         type: Unity::VM::GPU
         image: package-ci/ubuntu:stable
-        flavor: b1.xlarge
+        flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         UTR_VERSION: "current"
@@ -155,7 +155,7 @@ Build_URP_2D_Linux_Vulkan_Standalone_cache_mono_Linear_trunk:
     agent:
         type: Unity::VM::GPU
         image: package-ci/ubuntu:stable
-        flavor: b1.xlarge
+        flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         UTR_VERSION: "current"
@@ -207,7 +207,7 @@ Build_URP_2D_Linux_Vulkan_Standalone_mono_Linear_CUSTOM-REVISION:
     agent:
         type: Unity::VM::GPU
         image: package-ci/ubuntu:stable
-        flavor: b1.xlarge
+        flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
@@ -347,7 +347,7 @@ Build_URP_2D_Linux_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION:
     agent:
         type: Unity::VM::GPU
         image: package-ci/ubuntu:stable
-        flavor: b1.xlarge
+        flavor: b1.large
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
