--- a/.yamato/vikingvillage_urp-osx-metal.yml
+++ b/.yamato/vikingvillage_urp-osx-metal.yml
@@ -15,8 +15,8 @@ VikingVillage_URP_OSX_Metal_performance_playmode_runtime_mono_Linear_trunk:
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_BRANCH: symbols-test
+        VV_URP_REVISION: ce53e3196db02a5b4f0ed6fc6d6bee1b128652b6
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -65,8 +65,8 @@ VikingVillage_URP_OSX_Metal_performance_playmode_editor_mono_Linear_trunk:
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_BRANCH: symbols-test
+        VV_URP_REVISION: ce53e3196db02a5b4f0ed6fc6d6bee1b128652b6
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -115,8 +115,8 @@ VikingVillage_URP_OSX_Metal_performance_build_editmode_mono_Linear_trunk:
         flavor: m1.mac
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_BRANCH: symbols-test
+        VV_URP_REVISION: ce53e3196db02a5b4f0ed6fc6d6bee1b128652b6
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -166,8 +166,8 @@ VikingVillage_URP_OSX_Metal_performance_playmode_runtime_mono_Linear_CUSTOM-REVI
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_BRANCH: symbols-test
+        VV_URP_REVISION: ce53e3196db02a5b4f0ed6fc6d6bee1b128652b6
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -220,8 +220,8 @@ VikingVillage_URP_OSX_Metal_performance_playmode_editor_mono_Linear_CUSTOM-REVIS
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_BRANCH: symbols-test
+        VV_URP_REVISION: ce53e3196db02a5b4f0ed6fc6d6bee1b128652b6
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
@@ -274,8 +274,8 @@ VikingVillage_URP_OSX_Metal_performance_build_editmode_mono_Linear_CUSTOM-REVISI
     variables:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
         CUSTOM_REVISION: custom_revision_not_set
-        VV_URP_BRANCH: master
-        VV_URP_REVISION: 0546e39c0bb651be5d1f6d76a4f884417997a22a
+        VV_URP_BRANCH: symbols-test
+        VV_URP_REVISION: ce53e3196db02a5b4f0ed6fc6d6bee1b128652b6
         UTR_VERSION: "current"
         TEST_FILTER: .*
     commands:
